# crewai-soul

./: README.md  pyproject.toml
crewai_soul/: __init__.py  memory.py  schema.py  soulmate.py
crewai_soul.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_memory.py
