[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crewai-soul"
version = "0.3.1"
description = "The soul ecosystem for CrewAI: persistent memory, identity, database schema intelligence, and enterprise API integration."
readme = "README.md"
license = "MIT"
authors = [{name = "Prahlad G. Menon", email = "menon.prahlad@gmail.com"}]
keywords = ["crewai", "memory", "ai", "agents", "llm", "markdown", "soul", "rag", "semantic-layer", "soulmate"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "soul-agent>=0.1.7",
    "soul-schema>=0.1.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
crewai = ["crewai>=0.100.0"]

[project.urls]
Homepage = "https://github.com/menonpg/crewai-soul"
Documentation = "https://github.com/menonpg/crewai-soul#readme"
Repository = "https://github.com/menonpg/crewai-soul"

[tool.setuptools.packages.find]
where = ["."]
include = ["crewai_soul*"]
